--- a/registro.html
+++ b/registro.html
@@ -82,7 +82,7 @@
       <input type="text" id="email" name="email" required />
 
       <label for="nome">Senha:</label>
-      <input type="text" id="senha" name="semha"  required />
+      <input type="text" id="password" name="password"  required />
 
       <label for="data_nascimento">Data de Nascimento:</label>
       <input type="date" id="data_nascimento" name="data_nascimento" autocomplete="bday" required />
