--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
             <input type="password" name="password" id="password" placeholder="Senha" required>
             <button type="submit" name="submit" id="submit">Entrar</button>
         </form>
-        <p>Não tem uma conta? <a href="registro.html">Registre-se aqui</a></p>
+        <p>Não tem uma conta? <a href="registro.php">Registre-se aqui</a></p>
     </div>
 </body>
 </html>
